--- a/Thesis_Cutini/thesis_bib.bib
+++ b/Thesis_Cutini/thesis_bib.bib
@@ -65,14 +65,12 @@
 % doi={10.1109/ACC.2008.4586495}
 
 @article{Review_AVCS,
-author = {STEVEN E. SHLADOVER Deputy Director},
+author = {Steven E. Shladover},
 title = {Review of the State of Development of Advanced Vehicle Control Systems (AVCS)},
 journal = {Vehicle System Dynamics},
 volume = {24},
-number = {6-7},
 pages = {551-595},
-year = {1995},
-publisher = {Taylor & Francis}}
+year = {1995}}
 % doi = {10.1080/00423119508969108}
 
 @INPROCEEDINGS{Offset-free_compare,
@@ -93,7 +91,6 @@ volume = {45},
 number = {10},
 pages = {2214-2222},
 year = {2009},
-issn = {0005-1098},
 author = {Urban Maeder and Francesco Borrelli and Manfred Morari},
 keywords = {Model predictive control, Reference tracking, No offset, Integral control}
 }
@@ -119,7 +116,6 @@ volume = {36},
 number = {6},
 pages = {789-814},
 year = {2000},
-issn = {0005-1098},
 author = {D.Q. Mayne and J.B. Rawlings and C.V. Rao and P.O.M. Scokaert},
 keywords = {Model predictive control, Stability, Optimality, Robustness}
 }
@@ -155,15 +151,13 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
 
 @misc{diamondleague,
   title = {Diamond League Homepage},
-  howpublished = {\url{https://www.diamondleague.com/home/}},
-  note = {Accessed: February 26, 2024}
+  howpublished = {\url{https://www.diamondleague.com/home/}}
 }
 
 @misc{diamond2016cvxpy,
       title={CVXPY: A Python-Embedded Modeling Language for Convex Optimization}, 
       author={Steven Diamond and Stephen Boyd},
-      year={2016},
-      eprint={1603.00943}
+      year={2016}
 }
 
      % archivePrefix={arXiv},
@@ -172,7 +166,6 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
 @article{Stellato_2020,
    title={OSQP: an operator splitting solver for quadratic programs},
    volume={12},
-   ISSN={1867-2957},
    number={4},
    journal={Mathematical Programming Computation},
    publisher={Springer Science and Business Media LLC},
